# marvel-insurance-ai

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  product-engineer-frontend-take-home.md
.github/agents/: backend-engineer.agent.md  devsecops-engineer.agent.md  docs-adr-engineer.agent.md  frontend-engineer.agent.md  marvelx-ai-orchestrator.agent.md  qa-quality-engineer.agent.md  research-engineer.agent.md  security-engineer.agent.md  uiux-designer.agent.md
.husky/: pre-commit
client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
client/.husky/: pre-commit
client/src/: App.tsx  index.css  vite-env.d.ts
docs/: app-overview.md  implementation-tasks.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/adr/: 000-summary.md  001-frontend-framework.md  002-state-management.md  003-backend-framework.md  004-real-time-communication.md  005-styling-approach.md  006-testing-strategy.md  007-vitepress-docs.md  008-repository-process.md  009-ai-agent-orchestration.md  010-pr-guardrails.md  011-rendering-strategy.md  012-performance-reliability-standards.md  013-byoc-environment-config.md  013-react-error-boundary.md
docs/logs/: backend-foundations.md  backend-tooling.md  frontend-refactors.md  frontend-ui.md  lighthouse-audit.md  project-log.md  (+2 more)
server/: .env.example  main.py  pyproject.toml  requirements.txt
server/src/: config.py
server/src/data/: seed_claims.py
server/src/models/: __init__.py  claims.py
server/tests/: test_claims.py
(+81 files in other folders)
