[tool.poetry]
name = "claims-api"
version = "0.1.0"
description = "MarvelX Claims Review Backend API"
authors = ["Henrique Coutinho"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.139.0"
pydantic = "^2.13.4"
pydantic-core = "^2.46.4"
python-dotenv = "1.0.1"
uvicorn = {version = "0.30.6", extras = ["standard"]}
starlette = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.0"
ruff = "0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
